# freelancer_test

./: Cargo.toml  Dioxus.toml  README.md  bundle-delivery.js  bundle.js  chapshops-delivery-v1.js  chapshops-delivery-v3.js  chapshops-delivery-v4.js  chapshops-delivery.js  chapshops-v2.js  delivery-v3.js  delivery.js  main.js  tailwind-delivery.css  tailwind.css
.cargo/: config.toml
assets/: main.css  tailwind.css
rmetaIdfuho/: lib.rmeta
src/: main.rs
src/backend/: forms.rs  mod.rs  mongo_crud.rs  mongo_models.rs  users.rs  utils.rs
src/backend/api/: api.rs  jwt.rs  mod.rs
src/backend/auths/: auth_session.rs  mod.rs
src/frontend/: admin_page.rs  form_builder.rs  landing.rs  mod.rs  navbar.rs  signin.rs
