[package]
name = "freelance_test"
version = "0.1.0"
authors = ["kingIzi <scott.izidore@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
mongodb = { version = "3.2.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full","signal"], optional = true }
dotenvy = {version = "0.15.7", optional = true }
bson = {version = "2.15.0", optional = true}
chrono = { version = "0.4", features = ["serde"] }
bcrypt = { version = "0.17.0", optional = true}
thiserror = "2.0.12"
aes-gcm = {version = "0.10.3", optional = true}
rand = {version = "0.9.2", optional = true}
base64 = {version = "0.22.1", optional = true}
hex = {version = "0.4.3", optional = true}
axum = { version = "0.7", optional = true }
tower-sessions = {version = "0.11.0", optional = true}
tower-sessions-core = { version = "0.11.0", features = ["deletion-task"], optional = true }
tower-sessions-mongodb-store = {version = "0.11.0", optional = true}
jsonwebtoken = "9.3.1"
validator = { version = "0.20.0", features = ["derive"] }
sha2 = "0.10.9"
web-sys = {version = "0.3.77", features = ["std", "MediaQueryList", "MediaQueryListEvent"]}
gloo-net = {version = "0.6.0", features = ["http"]}
http = {version = "1.3.1", default-features = false}
phonenumber = "0.3.7"
regex = "1.11.1"
dioxus-query = "0.8.1"
modx = "0.1.4"
dioxus-free-icons = {version = "0.9.0", features = ["bootstrap"]}
gloo-timers = {version = "0.3.0", features = ["futures"]}




[features]
default = ["web"]
web = ["dioxus/web"]
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
server = [
    "dioxus/server", 
    "dep:axum", 
    "dep:tokio",  
    "dep:bson","dep:mongodb",
    "dep:dotenvy",
    "dep:bcrypt", 
    "dep:aes-gcm", 
    "dep:rand", 
    "dep:base64",
    "dep:hex",
    "dep:tower-sessions",
    "dep:tower-sessions-core",
    "dep:tower-sessions-mongodb-store"
]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.scripts]
tailwindcss = "npx @tailwindcss/cli -i ./tailwind.css -o ./assets/tailwind.css --watch"

